--- a/index.html
+++ b/index.html
@@ -3,13 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Website</title>
     <link rel="stylesheet" href="styles.css">
+    <title>KachleGG</title>
 </head>
 <body>
-    <header>
-        <h1>Welcome to My Simple Website</h1>
-    </header>
+    <div class="content">
+        <div class="gallery">
+            <a  href="https://github.com/KachleGG/ArduDrone" target="_blank">
+             <div class="project-card">
+                  <img src="gallery/ArduDrone.png" alt="ArduDrone">
+                 <div class="project-overlay"></div>
+                 <div class="project-text">
+                      <h3>ArduDrone</h3>
+                      <p>Arduino nano Drone</p>
+                    </div>
+                </div>
+            </a>
+            <a  href="https://github.com/KachleGG/ArduDrone" target="_blank">
+                <div class="project-card">
+                    <img src="gallery/PiDrone.png" alt="PiDrone">
+                    <div class="project-overlay"></div>
+                    <div class="project-text">
+                       <h3>PiDrone</h3>
+                      <p>Raspberry PI 5 Drone</p>
+                    </div>
+                </div>
+            </a>
+        </div>
+    </div>
+
+    <div class="files-page">
+        <a href="data_page.html" class="files-button">
+            Files and Data
+        </a>
+    </div>
     <footer>
         <p>&copy; 2025 Marek Kachlík. All rights reserved.</p>
     </footer>
