--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>KachleGG</title>
 </head>
 <body>
+    <div class="github-account">
+        <a href="https://github.com/KachleGG" target="_blank">GitHub Account</a>
+    </div>
     <div class="content">
         <div class="gallery">
             <a  href="https://github.com/KachleGG/ArduDrone" target="_blank">
@@ -19,13 +22,23 @@
                     </div>
                 </div>
             </a>
-            <a  href="https://github.com/KachleGG/ArduDrone" target="_blank">
+            <a  href="https://github.com/KachleGG/PiDrone" target="_blank">
                 <div class="project-card">
                     <img src="gallery/PiDrone.png" alt="PiDrone">
                     <div class="project-overlay"></div>
                     <div class="project-text">
                        <h3>PiDrone</h3>
                       <p>Raspberry PI 5 Drone</p>
+                    </div>
+                </div>
+            </a>
+            <a  href="https://github.com/KachleGG/ArduJet" target="_blank">
+                <div class="project-card">
+                    <img src="gallery/ArduJet.png" alt="ArduJet">
+                    <div class="project-overlay"></div>
+                    <div class="project-text">
+                       <h3>ArduJet</h3>
+                      <p>Arduino nano Drone</p>
                     </div>
                 </div>
             </a>
