--- a/data_page.html
+++ b/data_page.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="header-bar">
-        <a href="index.html" class="header-logo" alt="https://kachlegg.github.io/Web/">
+        <a href="https://kachlegg.github.io/Web/" class="header-logo" alt="https://kachlegg.github.io/Web/">
             <img src="gallery/logo.png">
         </a>
     </div>
