looking a bit better

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="gallery">
             <a  href="https://github.com/KachleGG/ArduDrone" target="_blank">
              <div class="project-card">
-                  <img src="gallery/ArduDrone.png" alt="ArduDrone">
+                  <img src="gallery/gradient.png" alt="ArduDrone">
                  <div class="project-overlay"></div>
                  <div class="project-text">
                       <h3>ArduDrone</h3>
@@ -24,7 +24,7 @@
             </a>
             <a  href="https://github.com/KachleGG/PiDrone" target="_blank">
                 <div class="project-card">
-                    <img src="gallery/PiDrone.png" alt="PiDrone">
+                    <img src="gallery/gradient.png" alt="PiDrone">
                     <div class="project-overlay"></div>
                     <div class="project-text">
                        <h3>PiDrone</h3>
@@ -34,7 +34,7 @@
             </a>
             <a  href="https://github.com/KachleGG/ArduJet" target="_blank">
                 <div class="project-card">
-                    <img src="gallery/ArduJet.png" alt="ArduJet">
+                    <img src="gallery/gradient.png" alt="ArduJet">
                     <div class="project-overlay"></div>
                     <div class="project-text">
                        <h3>ArduJet</h3>
