--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
                     </div>
                 </div>
             </a>
-            <a  href="https://github.com/KachleGG/PiDrone" target="_blank">
+            <a  href="https://github.com/KachleGG/DIYFilamentDryer" target="_blank">
                 <div class="project-card">
-                    <img src="gallery/gradient.png" alt="PiDrone">
+                    <img src="gallery/gradient.png" alt="DIYFilamentDryer">
                     <div class="project-overlay"></div>
                     <div class="project-text">
-                       <h3>PiDrone</h3>
-                      <p>Raspberry PI 5 Drone</p>
+                       <h3>DIYFilamentDryer</h3>
+                      <p>DIYFilamentDryer</p>
                     </div>
                 </div>
             </a>
